--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "displayName": "Healthbox Plugin",
   "name": "homebridge-healthbox-plugin",
-  "version": "1.0.0",
+  "version": "1.0.1-beta.0",
   "description": "A short description about what your plugin does.",
   "license": "Apache-2.0",
   "repository": {
