--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -21,5 +21,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 12
-      - run: npm install
-      - run: npm version ${{ inputs.type }}
+      - name: npm install
+        run: npm install
+      - name: npm version
+        run: npm version ${{ inputs.type }}
+      - name: Git Push
+        run: |
+          git config --global user.name 'Github'
+          git config --global user.email 'noreply@github.com'
+          git push
