update version action fix git push

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -30,4 +30,4 @@ jobs:
       - name: npm version
         run: npm version ${{ inputs.type }}
       - name: Git Push
-          git push origin master --follow-tags
+        run: git push origin master --follow-tags
