- Updated to v2 of API (a couple of data structure changes) - Added support for privileged mode (via api key from Renson). Adds all the sensor data to Homebridge

--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,6 @@ web_modules/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -121,3 +120,6 @@ dist
 
 #tmp
 tmp
+
+.idea
+.git
